[package]
name = "dynsequence"
version = "0.1.0-alpha.2"
description = "Sequence-Like data-structure for storing dynamically sized types"
authors = ["Christoph Hommelsheim <main@chommel.eu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/HellButcher/dynsequence-rs.git"
keywords = ["vec", "collection", "dyn", "dst"]
categories = ["data-structures", "no-std"]
readme = "README.md"
edition = "2021"

[features]
default = []
unstable = []

[dependencies]
